minor fix with search

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <br>
   <div class="search">
     <input id="search" type="text" name="" value="">
-    <button id="button" type="button" name="button">Submit</button>
+    <button id="button" >Submit</button>
   </div>
   <br><br>
 
