search results tag added

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 
 <body>
   <h1>Search Article</h1>
+
   <br>
   <div class="search">
     <input id="search" type="text" name="" value="">
     <button id="button" >Submit</button>
   </div>
   <br><br>
-
+  <h3 id="searchItem"></h3>
   <div>
     <ul id="results">
 
